<resources>
    <string name="app_name">SchoolTips</string>

    <string name="choose_exo">Choisis un exercice</string>

    <string name="interrogation">?</string>

    <string name="abandon">Abandonner</string>

    <string name="next">Suivant</string>

    <string name="cest_parti">C\'est parti !</string>

    <string name="calculs_titre">Mathématiques</string>
    <string name="culture_titre">Culture générale</string>
    <string name="change_user">Changer d\'utilisateur</string>

    <string name="calculs">%1$d %2$s %3$d =</string>

    <string name="seconde">%1$d s</string>
    <string name="minute">%1$d min</string>
    <string name="minute_30secondes">%1$d min 30 s</string>
    <string name="nolimit">sans</string>

    <string name="calculs_op_plus">+</string>
    <string name="calculs_op_moins">-</string>
    <string name="calculs_op_mul">×</string>
    <string name="calculs_op_div">÷</string>

    <string name="format_1">1</string>
    <string name="format_10">10</string>
    <string name="format_100">100</string>

    <string name="xsurx">%1$d/%2$d</string>
    <plurals name="erreurs">
        <item quantity="one">Il y a une erreur !</item>
        <item quantity="other">Il y a des erreurs !</item>
    </plurals>
    <string name="all_good">Bien joué ! Tu as tout juste.</string>
    <string name="no_question">Hehooo ?</string>
    <string name="retour_exos">Retour aux exerices</string>
    <string name="corriger">Corriger les erreurs</string>

    <string name="home">Choisi un utilisateur ou créé toi un compte</string>

    <string name="enter_lastname">Nom</string>
    <string name="enter_firstname">Prénom</string>
    <string name="error_lastname">Nom requis !</string>
    <string name="error_firstname">Prénom requis !</string>

    <string name="create_account">Créé ton compte !</string>

    <string name="back">Retour</string>
    <string name="valider">Valider</string>

    <string name="highScore">Score : %1$d</string>

    <string name="theme1">Français</string>
    <string name="theme2">Histoire</string>
    <string name="theme3">Géographie</string>

    <string name="timer">Temps :</string>
    <string name="nbquestions">Combien de questions ?</string>


</resources>