<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".CultureParamActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/culture_titre"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/nbquestions" />

        <NumberPicker
            android:id="@+id/nb_questions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:background="#c0c0c0" />

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/timer" />

        <NumberPicker
            android:id="@+id/timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>


    <Button
        android:id="@+id/theme1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="startQuizz"
        android:text="@string/theme1"
        android:textSize="20sp" />

    <Button
        android:id="@+id/theme2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="startQuizz"
        android:text="@string/theme2"
        android:textSize="20sp" />

    <Button
        android:id="@+id/theme3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="startQuizz"
        android:text="@string/theme3"
        android:textSize="20sp" />

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/back" />

</LinearLayout>