<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="40dp"
    tools:context=".CreerCompteActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/create_account"
        android:textSize="30sp" />


    <EditText
        android:id="@+id/Compte_lastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_lastname" />


    <EditText
        android:id="@+id/Compte_firstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_firstname" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/back_inscription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back" />

        <Button
            android:id="@+id/valider_inscription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/valider" />

    </RelativeLayout>
</LinearLayout>