<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".CalculsParamActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculs_titre"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/format_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/a_1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:button="@null"
            android:checked="true"
            android:drawableBottom="?android:attr/listChoiceIndicatorSingle"
            android:gravity="center_horizontal|bottom"
            android:text="@string/format_1"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/a_10"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:button="@null"
            android:drawableBottom="?android:attr/listChoiceIndicatorSingle"
            android:gravity="center_horizontal|bottom"
            android:text="@string/format_10"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/a_100"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:button="@null"
            android:drawableBottom="?android:attr/listChoiceIndicatorSingle"
            android:gravity="center_horizontal|bottom"
            android:text="@string/format_100"
            android:textSize="15sp" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/operation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/calculs_op_plus"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/moins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculs_op_moins"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/mul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculs_op_mul"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/div"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculs_op_div"
            android:textSize="20sp" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/format_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/b_1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:button="@null"
            android:checked="true"
            android:drawableTop="?android:attr/listChoiceIndicatorSingle"
            android:gravity="center_horizontal|top"
            android:text="@string/format_1"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/b_10"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:button="@null"
            android:drawableTop="?android:attr/listChoiceIndicatorSingle"
            android:gravity="center_horizontal|top"
            android:text="@string/format_10"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/b_100"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:button="@null"
            android:drawableTop="?android:attr/listChoiceIndicatorSingle"
            android:gravity="center_horizontal|top"
            android:text="@string/format_100"
            android:textSize="15sp" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/nbquestions" />

        <NumberPicker
            android:id="@+id/nb_op"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:descendantFocusability="blocksDescendants" />

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:background="#c0c0c0" />

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/timer" />

        <NumberPicker
            android:id="@+id/timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:descendantFocusability="blocksDescendants" />

    </LinearLayout>

    <Button
        android:id="@+id/go"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/cest_parti"
        android:textSize="15sp" />

    <Button
        android:id="@+id/retour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/back"
        android:textSize="15dp" />

</LinearLayout>